コンテンツを増やし、jsで動きを付けました

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header>
       <h1 class="text-center" id="what">Portfolio</h1>
       <h2 class="text-center" id="who">Koji Ishii</h2>
-      <p id="when">Latest Update: 2020/ 6/ 5</p>
+      <p id="when">Latest Update: 2020/ 6/ 6</p>
     </header>
-    <nav>
-      <ul class="flex-between text-center">
+    <nav id="content-nav">
+      <ul class="flex text-center">
         <li @click="changeContent('carrer')">
           <i class="material-icons">assignment_ind</i>
           <p>Carrer / Skill</p>
@@ -34,15 +34,15 @@
       </ul>
     </nav>
     <div id="click-suggest">
-      <ul class="flex-between text-center"> 
+      <ul class="flex text-center"> 
         <li>
-          <span class="material-icons">keyboard_arrow_up</span>
+          <i class="material-icons">keyboard_arrow_up</i>
         </li>
         <li>
-          <span class="material-icons">keyboard_arrow_up</span>
+          <i class="material-icons">keyboard_arrow_up</i>
         </li>
         <li>
-          <span class="material-icons">keyboard_arrow_up</span>
+          <i class="material-icons">keyboard_arrow_up</i>
         </li>
       </ul>
       <p class="text-center">Please click icon.</p>
